--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Business Card</string>
+    <string name="image_desc">The cards image. In this case it\'s an image of the favorite chrecter of the cards owner.</string>
 </resources>
